[package]
name = "light-rc-arena"
version = "0.1.5"
edition = "2024"


license = "MIT"
description="A lightweight arena allocator that can be cloned and shared like Rc."
readme = "README.md"
repository="https://github.com/PsychedelicPalimpsest/light-rc-arena"
homepage="https://github.com/PsychedelicPalimpsest/light-rc-arena"
keywords=["arena"]





[dependencies]
